# akizuki-invoice-parser

./: .gitignore  Cargo.toml  README.md
src/models/: invoice.rs  item.rs  mod.rs
src/parser/: html_parser.rs
tests/: html_parser_before_shippment_tests.rs  html_parser_tests.rs  invoice_tests.rs  item_tests.rs
