[package]
name = "akizuki_invoice_parser"
version = "0.1.1"
edition = "2024"
exclude = ["assets/*.html"]

[lib]
name = "akizuki_invoice_parser"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
scraper = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
